--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,4 +68,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    compile group: 'commons-io', name: 'commons-io', version: '2.7'
+}
